--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>Maksim Stepanenko</title>
+    <title>{{ page.title }}| Maksim Stepaneko</title>
     <meta name="description" content="Computer Science at MIT'12, Developer at
     locu.com, Personal Website">
     <meta name="author" content="Maksim Stepanenko">
@@ -12,6 +13,10 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    Hi! :)
+    <section class="sidebar">
+      <a href="/">
+        <img src="/images/maksim.jpeg" class="profile-photo"/>
+      </a>
+    </section>
   </body>
 </html>
