--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,18 +5,59 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>{{ page.title }}| Maksim Stepaneko</title>
+    <title>Maksim Stepanenko | {{ page.title }}</title>
     <meta name="description" content="Computer Science at MIT'12, Developer at
     locu.com, Personal Website">
     <meta name="author" content="Maksim Stepanenko">
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link href="/webfonts/ss-social.css" rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-36534133-1']);
+      _gaq.push(['_setDomainName', 'maksims.me']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+    </head>
   <body>
-    <section class="sidebar">
-      <a href="/">
-        <img src="/images/maksim.jpeg" class="profile-photo"/>
-      </a>
-    </section>
+    <header class="sidebar">
+      <div class="sidebar-avatar">
+        <a href="/">
+          <img src="/images/maksim.jpeg" class="profile-photo"/>
+        </a>
+      </div>
+      <h2 class="sidebar-name">
+        <a href="/">
+          Maksim <br>
+          Stepanenko
+        </a>
+      </h2>
+      <section class="sidebar-social">
+        <a href="https://twitter.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF611;</i></a>
+        <a href="https://github.com/maksim-s"><i class="ss-icon ss-social-circle">&#xF671;</i></a>
+        <a href="http://instagram.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF641;</i></a>
+      </section>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      <div class="sidebar-nav">
+        <ul>
+          <li><a href="/about">About</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/photography">Photography</a></li>
+        </ul>
+      </div>
+      <div class="sidebar-twitter-button">
+        <a href="https://twitter.com/maksim_s" class="twitter-follow-button" data-show-count="false">Follow @maksim_s</a>
+      </div>
+    </header>
+    {{ content }}
   </body>
 </html>
