--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,15 @@
 layout: layout
 ---
 
-<h2>{{ page.title }}</h2>
+<section class="content">
+  <h1>
+    <a href="{{ page.url }}">{{ page.title }}</a>
+  </h1>
+
+  <section class="byline">
+    {{ page.date | date: "%B %e, %Y" }}
+  </section>
+
   {{ content }}
+
+</section>
