--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link href="/webfonts/ss-social.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href="/js/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="/js/google-code-prettify/prettify.js"></script>
     <script type="text/javascript">
-
+      onload="prettyPrint()"
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-36534133-1']);
       _gaq.push(['_setDomainName', 'maksims.me']);
@@ -28,7 +30,7 @@
 
     </script>
     </head>
-  <body>
+  <body onload="prettyPrint()">
     <header class="sidebar">
       <div class="sidebar-avatar">
         <a href="/">
