--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,4 +13,21 @@ layout: layout
 
   {{ content }}
 
+  <div class="share">
+    <a href="http://news.ycombinator.com/submit" class="hn-share-button">
+      Vote on HN
+    </a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="maksim_s">
+      Tweet
+    </a>
+  </div>
+    <script>
+      (function(d, t) {
+          var g = d.createElement(t),
+              s = d.getElementsByTagName(t)[0];
+          g.src = '//hnbutton.appspot.com/static/hn.min.js';
+          s.parentNode.insertBefore(g, s);
+      }(document, 'script'));
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
 </section>
