--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ body {
   padding: 0;
 }
 
-.sidebar-nav li {
+.sidebar-nav ul li {
   list-style: none;
   margin-bottom: 7px;
 }
@@ -287,31 +287,64 @@ body {
 }
 @media screen and (max-width: 670px) and (min-width: 200px) {
   .sidebar {
-    display: none;
-    position: relative;
-    height: 10%;
+    position: fixed;
+    height: 8%;
     width: 100%;
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
   }
   .sidebar .sidebar-avatar {
-    width: 100px;
-    height: 100px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    margin: 5px 5px 0 20px;
+    position: fixed;
+    display: block;
   }
   .sidebar .sidebar-name {
-    letter-spacing: 0.5px;
-    font-size: 1.5em;
-  }
-  .sidebar .sidebar-nav a {
-    padding: 2px 0;
-    font-size: 1em;
+    display: none;
   }
   
   .content {
     width: 100%;
-    margin: 0;
+    margin: 8% 0 0 0;
+    padding: 0 5px 0 8px; 
+    position: fixed;
   }
+  .sidebar-social {
+    margin-bottom: 5px;
+    position: fixed;
+    margin: 60px 5px 0 18px;
+  }
+
+  .sidebar-social a {
+    font-size: 0.9em;
+  }
+
+  .sidebar-twitter-button {
+    display: none;
+  }
+
+  .sidebar-nav {
+    position: fixed;
+    margin: 17px 0 0 25%;
+  }
+
+  .sidebar-nav a {
+    padding: 10px;
+    font-size: 1em;
+  }
+  .sidebar-nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .sidebar-nav ul li {
+    display: inline-block;
+    list-style-type: none;
+  }
+
 
 }
