--- a/css/main.css
+++ b/css/main.css
@@ -307,9 +307,10 @@ body {
   }
   
   .content {
-    width: 100%;
-    margin: 80px 5px 5px 8px;
-    position: fixed;
+    width: 92%;
+    margin-top: 90px;
+    margin-left: 8px;
+    position: relative;
   }
   .sidebar-social {
     margin-bottom: 5px;
