removing twitter for now

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -48,7 +48,7 @@
         <a href="https://github.com/maksim-s"><i class="ss-icon ss-social-circle">&#xF671;</i></a>
         <a href="http://instagram.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF641;</i></a>
       </section>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script>!function(d,s,id){var js,fjs=d.getelementsbytagname(s)[0];if(!d.getelementbyid(id)){js=d.createelement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentnode.insertbefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       <div class="sidebar-nav">
         <ul>
           <li><a href="/about">About</a></li>
@@ -56,9 +56,9 @@
           <li><a href="/photography">Photography</a></li>
         </ul>
       </div>
-      <div class="sidebar-twitter-button">
-        <a href="https://twitter.com/maksim_s" class="twitter-follow-button" data-show-count="false">Follow @maksim_s</a>
-      </div>
+      <!--div class="sidebar-twitter-button">
+        <a href="https://twitter.com/maksim_s" class="twitter-follow-button" data-show-count="false">@maksim_s</a>
+      </div-->
     </header>
     {{ content }}
   </body>
