--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   top: 0;
   bottom: 0;
   right: auto;
-  width: 20%;
+  width: 12%;
   font-family: Helvetica, sans-serif;
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
@@ -17,14 +17,14 @@ body {
 
 .sidebar-avatar {
   position: relative;
-  width: 120px;
-  height: 120px;
+  width: 76px;
+  height: 76px;
   display: inline-block;
   margin: auto;
-  margin-top: 40%;
-  -moz-border-radius: 60px;
-  -webkit-border-radius: 60px;
-  border-radius: 60px;
+  margin-top: 100%;
+  -moz-border-radius: 38px;
+  -webkit-border-radius: 38px;
+  border-radius: 38px;
 }
 
 .profile-photo {
@@ -35,7 +35,7 @@ body {
 
 .sidebar-name {
   font-family: 'Poiret One', sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 900;
   letter-spacing: 1px;
   margin: auto;
@@ -54,7 +54,7 @@ body {
 
 .sidebar-social a {
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 1.1em;
   color: #969696;
 }
 
@@ -75,7 +75,7 @@ body {
   padding: 3px 0;
   font-family: Helvetica, sans-serif;
   color: #111F33;
-  font-size: 1.3em;
+  font-size: 1.1em;
   display: block;
   text-decoration: none;
 }
@@ -96,7 +96,7 @@ body {
 
 .content {
   width: 70%;
-  margin-left: 25%;
+  margin-left: 20%;
   margin-bottom: 5%;
   margin-top: 5%;
 }
@@ -248,32 +248,13 @@ body {
 .content #galleria { 
   width: 100%;
 }
-@media screen and (max-width: 900px) and (min-width: 780px) {
+@media screen and (max-width: 1200px) and (min-width: 1100px) {
   .sidebar .sidebar-avatar {
-    width: 110px;
-    height: 110px;
-    -moz-border-radius: 55px;
-    -webkit-border-radius: 55px;
-    border-radius: 55px;
-  }
-  .sidebar .sidebar-name {
-    letter-spacing: 0.5px;
-    font-size: 1.75em;
-  }
-  .sidebar .sidebar-nav a {
-    padding: 2px 0;
-    font-size: 1.1em;
-  }
-
-}
-
-@media screen and (max-width: 780px) and (min-width: 670px) {
-  .sidebar .sidebar-avatar {
-    width: 100px;
-    height: 100px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 50px;
+    width: 76px;
+    height: 76px;
+    -moz-border-radius: 38px;
+    -webkit-border-radius: 38px;
+    border-radius: 38px;
   }
   .sidebar .sidebar-name {
     letter-spacing: 0.5px;
@@ -285,7 +266,94 @@ body {
   }
 
 }
-@media screen and (max-width: 670px) and (min-width: 200px) {
+
+@media screen and (max-width: 1100px) and (min-width: 950px) {
+  .sidebar .sidebar-avatar {
+    width: 70px;
+    height: 70px;
+    -moz-border-radius: 35px;
+    -webkit-border-radius: 35px;
+    border-radius: 35px;
+  }
+  .sidebar .sidebar-name {
+    letter-spacing: 0.5px;
+    font-size: 1.4em;
+  }
+  .sidebar .sidebar-nav a {
+    padding: 2px 0;
+    font-size: 1em;
+  }
+
+}
+@media screen and (max-width: 950px) and (min-width: 600px) {
+  .sidebar {
+    position: fixed;
+    height: 80px;
+    width: 100%;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
+    background: rgba(255,255,255,0.95);
+    z-index: 1;
+  }
+  .sidebar .sidebar-avatar {
+    width: 50px;
+    height: 50px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px;
+    margin: 10px 5px 0 5%;
+    position: fixed;
+    display: block;
+    z-index: 2;
+  }
+  .sidebar .sidebar-name {
+    display: none;
+  }
+  
+  .content {
+    width: 92%;
+    margin-top: 90px;
+    margin-left: 8px;
+    position: relative;
+    z-index: 0;
+  }
+  .sidebar-social {
+    position: fixed;
+    margin: 60px 5px 0 5%;
+    z-index: 2;    
+  }
+
+  .sidebar-social a {
+    font-size: 0.9em;
+  }
+
+  .sidebar-twitter-button {
+    display: none;
+  }
+
+  .sidebar-nav {
+    position: fixed;
+    margin: 20px 0 0 27%;
+    z-index: 2;
+  }
+
+  .sidebar-nav a {
+    padding: 5px;
+    font-size: 1.3em;
+  }
+  .sidebar-nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .sidebar-nav ul li {
+    display: inline-block;
+    list-style-type: none;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+@media screen and (max-width: 600px) and (min-width: 200px) {
   .sidebar {
     position: fixed;
     height: 80px;
@@ -339,7 +407,7 @@ body {
 
   .sidebar-nav a {
     padding: 5px;
-    font-size: 1em;
+    font-size: 1.1em;
   }
   .sidebar-nav ul {
     list-style-type: none;
