--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>Maksim Stepanenko | {{ page.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="description" content="Computer Science at MIT'12, Developer at
     locu.com, Personal Website">
     <meta name="author" content="Maksim Stepanenko">
+    <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/css/main.css" />
     <link href="/webfonts/ss-social.css" rel="stylesheet" />
@@ -46,7 +47,7 @@
       <section class="sidebar-social">
         <a href="https://twitter.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF611;</i></a>
         <a href="https://github.com/maksim-s"><i class="ss-icon ss-social-circle">&#xF671;</i></a>
-        <a href="http://instagram.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF641;</i></a>
+        <a href="http://feeds.feedburner.com/MaksimStepanenko"><i class="ss-icon ss-social-circle">&#xE310;</i></a>
       </section>
       <div class="sidebar-nav">
         <ul>
