--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,14 @@ layout: layout
 
   {{ content }}
 
+  <div id="related">
+    <p id="related-posts">Related Posts</p>
+    <ul class="listing">
+      {% for post in site.related_posts limit:3 %}
+        <li><span class="date">{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
   <div class="share">
     <a href="http://news.ycombinator.com/submit" class="hn-share-button">
       Vote on HN
