--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,8 @@ body {
 }
 
 .content {
-  width: 70%;
-  margin-left: 20%;
+  width: 60%;
+  margin-left: 25%;
   margin-bottom: 5%;
   margin-top: 5%;
 }
@@ -231,9 +231,26 @@ body {
   color: #111F33;
   font-weight: 550;
 }
+#related .listing li {
+  font-size: 0.8em;
+  padding: 0;
+}
+#related ul {
+  margin: 5px 0 0 0;
+}
+#related .date {
+  font-size: 0.8em;
+}
+#related-posts {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-family: Helvetica;
+  font-size: 1.1em;
+}
 
 .content .listing .date {
-  font-size: 0.6em;
+  font-size: 0.7em;
   color: #C4C4C4;
   font-family: Helvetica, sans-serif;
 
@@ -317,9 +334,9 @@ body {
   }
   
   .content {
-    width: 92%;
+    width: 90%;
     margin-top: 90px;
-    margin-left: 8px;
+    margin-left: 5%;
     position: relative;
     z-index: 0;
   }
