some style changes

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,14 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <title>{{ page.title }}</title>
-    <meta name="description" content="Computer Science at MIT'12, Developer at
-    locu.com, Personal Website">
     <meta name="author" content="Maksim Stepanenko">
     <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/css/main.css" />
     <link href="/webfonts/ss-social.css" rel="stylesheet" />
-    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="/js/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="/js/google-code-prettify/prettify.js"></script>
     <script type="text/javascript">
@@ -51,9 +49,9 @@
       </section>
       <div class="sidebar-nav">
         <ul>
-          <li><a href="/about">About</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/photography">Photography</a></li>
+          <li><a id="about" href="/about">About</a></li>
+          <li><a id="projects" href="/projects">Projects</a></li>
+          <li><a id="photography" href="/photography">Photography</a></li>
         </ul>
       </div>
     </header>
