--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Maksim Stepanenko">
     <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/stylesheets/css/main.css" />
     <link href="/webfonts/ss-social.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="/js/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
@@ -38,8 +38,7 @@
       </div>
       <h2 class="sidebar-name">
         <a href="/">
-          Maksim <br>
-          Stepanenko
+          Maksim Stepanenko
         </a>
       </h2>
       <section class="sidebar-social">
