--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -8,7 +8,7 @@
   right: auto;
   width: 200px;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
+  border-right: 1px solid #c4c4c4;
   text-align: center;
   background: white;
   z-index: 2; }
