--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -139,7 +139,7 @@
     padding-top: 30px;
     width: 100%;
     text-align: right;
-    border-top: 1px solid #505759; }
+    border-top: 1px solid #c4c4c4; }
   .content h1 {
     color: #111f33;
     font-weight: 900;
