--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -172,7 +172,7 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
     padding-top: 30px;
     width: 100%;
     text-align: right;
-    border-top: 1px solid $text-color;
+    border-top: 1px solid $byline-color;
   }
   h1 {
     color: $heading-color;
