--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -19,7 +19,7 @@
     .sidebar {
       height: 80px;
       width: 100%;
-      box-shadow: 0 0px 10px rgba(0, 0, 0, 0.3);
+      border-bottom: 1px solid #c4c4c4;
       background: rgba(255, 255, 255, 0.95);
       z-index: 1; } }
   .sidebar .sidebar-avatar {
