--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -187,7 +187,9 @@
     max-width: 100%; }
   .content li {
     margin-bottom: 10px;
-    color: #111F33; }
+    font-size: 1em;
+    line-height: 1.7em;
+    color: #505759; }
   .content blockquote {
     padding: 0.25em 1em;
     margin-left: 0px;
