listing line height

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -281,6 +281,7 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
       margin: 0;
       color: $text-color;
       font-weight: 550;
+      line-height: 1em;
     }
     .date {
       font-size: 0.9em;
