--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -226,7 +226,8 @@
       padding: 2px 0 2px 0;
       margin: 0;
       color: #505759;
-      font-weight: 550; }
+      font-weight: 550;
+      line-height: 1em; }
     .content .listing .date {
       font-size: 0.9em;
       color: #c4c4c4; }
