--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -31,27 +31,25 @@
     </head>
   <body onload="prettyPrint()">
     <header class="sidebar">
-      <div class="sidebar-avatar">
-        <a href="/">
-          <img src="/images/maksim.jpeg" class="profile-photo"/>
-        </a>
-      </div>
-      <h2 class="sidebar-name">
-        <a href="/">
-          Maksim Stepanenko
-        </a>
-      </h2>
-      <section class="sidebar-social">
-        <a href="https://twitter.com/maksim_s"><i class="ss-icon ss-social-circle">&#xF611;</i></a>
-        <a href="https://github.com/maksim-s"><i class="ss-icon ss-social-circle">&#xF671;</i></a>
-        <a href="http://feeds.feedburner.com/MaksimStepanenko"><i class="ss-icon ss-social-circle">&#xE310;</i></a>
-      </section>
-      <div class="sidebar-nav">
-        <ul>
-          <li><a id="about" href="/about">About</a></li>
-          <li><a id="projects" href="/projects">Projects</a></li>
-          <li><a id="photography" href="/photography">Photography</a></li>
-        </ul>
+      <div class="sidebar-background">
+        <div class="sidebar-profile">
+          <div class="sidebar-avatar">
+            <a href="/">
+              <img src="/images/profile.jpeg" class="profile-photo"/>
+            </a>
+          </div>
+          <h2 class="sidebar-name">
+            <a href="/">@maksim_s</a>
+          </h2>
+          <div class="sidebar-bio">
+            Kyrgyz transplant. Studied CS and taekwondo at MIT. Currently building and breaking things at Locu.
+          </div>
+          <div class="sidebar-social">
+            <a href="https://twitter.com/maksim_s" target="_blank"><i class="ss-icon ss-social-circle">&#xF611;</i></a>
+            <a href="https://github.com/maksim-s" target="_blank"><i class="ss-icon ss-social-circle">&#xF671;</i></a>
+            <a href="http://feeds.feedburner.com/MaksimStepanenko" target="_blank"><i class="ss-icon ss-social-circle">&#xE310;</i></a>
+          </div>
+        </div>
       </div>
     </header>
     {{ content }}
