--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -6,15 +6,11 @@
   top: 0;
   bottom: 0;
   right: auto;
-  width: 200px;
+  width: 30%;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  border-right: 1px solid #c4c4c4;
   text-align: center;
   background: white;
   z-index: 2; }
-  @media only screen and (min-width: 601px) and (max-width: 950px) {
-    .sidebar {
-      width: 145px; } }
   @media only screen and (max-width: 600px) {
     .sidebar {
       height: 80px;
@@ -22,20 +18,34 @@
       border-bottom: 1px solid #c4c4c4;
       background: rgba(255, 255, 255, 0.95);
       z-index: 1; } }
+  .sidebar .sidebar-background {
+    background-image: url(/images/header.jpeg);
+    position: relative;
+    height: 72%;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position-x: 55%; }
+  .sidebar .sidebar-profile {
+    position: absolute;
+    bottom: -31%; }
+  .sidebar .sidebar-bio {
+    font-size: 0.9em;
+    margin: 0 auto 15px auto;
+    width: 80%; }
   .sidebar .sidebar-avatar {
     position: relative;
-    width: 76px;
-    height: 76px;
+    width: 100px;
+    height: 100px;
     display: inline-block;
     margin: auto;
-    margin-top: 100%;
-    -moz-border-radius: 38px;
-    -webkit-border-radius: 38px;
-    border-radius: 38px; }
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px; }
     .sidebar .sidebar-avatar .profile-photo {
       height: 100%;
       width: 100%;
-      border-radius: 100%; }
+      border-radius: 100%;
+      border: 2px solid white; }
     @media only screen and (max-width: 600px) {
       .sidebar .sidebar-avatar {
         width: 50px;
@@ -49,10 +59,9 @@
         z-index: 2; } }
   .sidebar .sidebar-name {
     font-family: "Source Sans Pro", Helvetica, sans-serif;
-    font-size: 1em;
-    font-weight: normal;
+    font-size: 1.1em;
+    font-weight: bold;
     margin: auto;
-    text-transform: uppercase;
     margin-top: 5px;
     margin-bottom: 15px; }
     .sidebar .sidebar-name a {
@@ -62,8 +71,7 @@
       .sidebar .sidebar-name {
         display: none; } }
   .sidebar .sidebar-social {
-    margin: auto;
-    margin-bottom: 50px; }
+    margin: auto; }
     .sidebar .sidebar-social a {
       text-decoration: none;
       font-size: 1.5em;
@@ -116,16 +124,9 @@
 
 .content {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  max-width: 650px;
-  width: 50%;
-  margin-left: 30%;
-  margin-bottom: 5%;
-  margin-top: 5%;
+  width: 70%;
+  float: right;
   z-index: 1; }
-  @media only screen and (min-width: 601px) and (max-width: 950px) {
-    .content {
-      width: 70%;
-      margin-left: 27%; } }
   @media only screen and (max-width: 600px) {
     .content {
       width: 92%;
@@ -133,6 +134,9 @@
       margin-left: 8px;
       position: relative;
       z-index: 0; } }
+  .content .blog-posts {
+    padding-top: 10%;
+    padding-left: 15%; }
   .content .share {
     margin-top: 40px;
     margin-bottom: 10%;
