--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,11 @@
 ---
 layout: layout
 ---
-
+<style type="text/css">
+  .sidebar-background {
+    background: none !important;
+  }
+</style>
 <section class="content">
   <div class="post-title">
     <h1>
