--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -42,7 +42,7 @@
             <a href="/">@maksim_s</a>
           </h2>
           <div class="sidebar-bio">
-            Kyrgyz transplant. Studied CS and taekwondo at MIT. Currently building and breaking things at Locu.
+            Kyrgyz transplant. Studied computer science and taekwondo at MIT. Currently building and breaking things at Locu.
           </div>
           <div class="sidebar-social">
             <a href="https://twitter.com/maksim_s" target="_blank"><i class="ss-icon ss-social-circle">&#xF611;</i></a>
