--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,7 @@
 ---
 layout: layout
 ---
-<style type="text/css">
-  .sidebar-background {
-    background: none !important;
-  }
-</style>
+<link rel="stylesheet" href="/stylesheets/css/post.css" />
 <section class="content">
   <div class="post-title">
     <h1>
