--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -11,13 +11,12 @@
   text-align: center;
   background: white;
   z-index: 2; }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 1000px) {
     .sidebar {
-      height: 80px;
+      height: 320px;
       width: 100%;
-      border-bottom: 1px solid #c4c4c4;
-      background: rgba(255, 255, 255, 0.95);
-      z-index: 1; } }
+      z-index: 1;
+      position: absolute; } }
   .sidebar .sidebar-background {
     background-image: url(/images/header.jpeg);
     position: relative;
@@ -25,13 +24,33 @@
     background-repeat: no-repeat;
     background-size: auto 100%;
     background-position-x: 55%; }
+    @media only screen and (max-width: 1000px) {
+      .sidebar .sidebar-background {
+        height: 100%;
+        background-size: 100% auto;
+        background-position-y: 85%; } }
+    @media only screen and (max-width: 600px) {
+      .sidebar .sidebar-background {
+        background-size: 120% auto; } }
   .sidebar .sidebar-profile {
     position: absolute;
-    bottom: -215px; }
+    bottom: -215px;
+    left: 15%;
+    right: 15%; }
+    @media only screen and (max-width: 1000px) {
+      .sidebar .sidebar-profile {
+        width: 60%;
+        left: 20%;
+        right: 20%;
+        bottom: -200px; } }
+    @media only screen and (max-width: 600px) {
+      .sidebar .sidebar-profile {
+        width: 85%;
+        left: 8%;
+        right: 8%; } }
   .sidebar .sidebar-bio {
     font-size: 0.9em;
-    margin: 0 auto 15px auto;
-    width: 80%; }
+    margin-bottom: 15px; }
   .sidebar .sidebar-avatar {
     position: relative;
     width: 100px;
@@ -46,17 +65,6 @@
       width: 100%;
       border-radius: 100%;
       border: 2px solid white; }
-    @media only screen and (max-width: 600px) {
-      .sidebar .sidebar-avatar {
-        width: 50px;
-        height: 50px;
-        -moz-border-radius: 25px;
-        -webkit-border-radius: 25px;
-        border-radius: 25px;
-        margin: 5px 5px 0 20px;
-        position: fixed;
-        display: block;
-        z-index: 2; } }
   .sidebar .sidebar-name {
     font-family: "Source Sans Pro", Helvetica, sans-serif;
     font-size: 1.1em;
@@ -67,9 +75,6 @@
     .sidebar .sidebar-name a {
       text-decoration: none;
       color: #111f33; }
-    @media only screen and (max-width: 600px) {
-      .sidebar .sidebar-name {
-        display: none; } }
   .sidebar .sidebar-social {
     margin: auto; }
     .sidebar .sidebar-social a {
@@ -78,22 +83,8 @@
       color: #c4c4c4; }
       .sidebar .sidebar-social a:hover {
         color: #111f33; }
-      @media only screen and (max-width: 600px) {
-        .sidebar .sidebar-social a {
-          font-size: 0.9em; } }
-    @media only screen and (max-width: 600px) {
-      .sidebar .sidebar-social {
-        margin-bottom: 5px;
-        position: fixed;
-        margin: 60px 5px 0 18px;
-        z-index: 2; } }
   .sidebar .sidebar-nav {
     margin-left: auto; }
-    @media only screen and (max-width: 600px) {
-      .sidebar .sidebar-nav {
-        position: fixed;
-        margin: 20px 0 0 24%;
-        z-index: 2; } }
     .sidebar .sidebar-nav a {
       color: #111f33;
       font-size: 1.1em;
@@ -102,45 +93,37 @@
       font-weight: normal; }
       .sidebar .sidebar-nav a:hover {
         color: #d90e00; }
-      @media only screen and (max-width: 600px) {
-        .sidebar .sidebar-nav a {
-          padding: 5px;
-          font-size: 1em; } }
     .sidebar .sidebar-nav ul {
       margin: 0;
       padding: 0; }
-      @media only screen and (max-width: 600px) {
-        .sidebar .sidebar-nav ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0; } }
       .sidebar .sidebar-nav ul li {
         list-style: none;
         margin-bottom: 10px; }
-        @media only screen and (max-width: 600px) {
-          .sidebar .sidebar-nav ul li {
-            display: inline-block;
-            list-style-type: none; } }
 
 .content {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   width: 70%;
   float: right;
   z-index: 1; }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 1000px) {
     .content {
-      width: 92%;
-      margin-top: 90px;
-      margin-left: 8px;
+      width: 100%;
+      margin-top: 520px;
       position: relative;
       z-index: 0; } }
   .content .post-title {
     width: 80%;
     margin: auto;
     margin-top: 50px; }
+    @media only screen and (max-width: 1000px) {
+      .content .post-title {
+        width: 90%; } }
   .content .blog-posts {
     padding-top: 10%;
     padding-left: 15%; }
+    @media only screen and (max-width: 1000px) {
+      .content .blog-posts {
+        padding: 5% 10%; } }
   .content .share {
     margin: auto;
     margin-top: 40px;
@@ -152,6 +135,9 @@
   .content .post-content {
     width: 80%;
     margin: auto; }
+    @media only screen and (max-width: 1000px) {
+      .content .post-content {
+        width: 90%; } }
   .content h1 {
     color: #111f33;
     font-weight: 900;
