--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -57,14 +57,16 @@
     height: 100px;
     display: inline-block;
     margin: auto;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px; }
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    border: 2px solid white; }
     .sidebar .sidebar-avatar .profile-photo {
       height: 100%;
       width: 100%;
-      border-radius: 100%;
-      border: 2px solid white; }
+      -webkit-border-radius: 100%;
+      -moz-border-radius: 100%;
+      border-radius: 100%; }
   .sidebar .sidebar-name {
     font-family: "Source Sans Pro", Helvetica, sans-serif;
     font-size: 1.1em;
