--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -85,14 +85,16 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
     height: 100px;
     display: inline-block;
     margin: auto;
-    -webkit-border-radius: 50px;
-       -moz-border-radius: 50px;
-            border-radius: 50px;
+      -webkit-border-radius: 100%;
+         -moz-border-radius: 100%;
+              border-radius: 100%;
+    border: 2px solid white;
     .profile-photo {
       height: 100%;
       width: 100%;
-      border-radius: 100%;
-      border: 2px solid white;
+      -webkit-border-radius: 100%;
+         -moz-border-radius: 100%;
+              border-radius: 100%;
     }
   }
   .sidebar-name {
