--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -39,6 +39,7 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
 
   .sidebar-background {
     background-image: url(/images/header.jpeg);
+    background-color: black;
     position: relative;
     height: 72%;
     background-repeat: no-repeat;
@@ -51,7 +52,7 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
     }
 
     @include respond-to(handhelds) {
-      background-size: 120% auto;
+      background-size: 170% auto;
 
     }
   }
